nerworkpolicy/namespace1.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: dev
  labels:
    env: dev
  namespace: dev-names
  annotations:
    name: first
