nerworkpolicy/namespace2.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: qa
  labels:
    env: map
  namespace: dev-names
  annotations:
    name: first
