nerworkpolicy/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
  labels:
    app: dev
  namespace: dev
spec:
  containers:
    - name: first
      image: alpine
      command: ["/bin/sh", "-c", "sleep 3600"]
