nerworkpolicy/network2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: first
  labels:
    env: dev
  namespace: qa
spec:
  policyTypes: 
    - Ingress
  ingress:
    - from: 
        - namespaceSelector: 
            matchLabels:
               env: dev
